--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Pagina Home</h1>
+    <p>Vendas = R$ 8,0000</p>
     <a href="index.html">voltar para pagina de vendas</a>
+
 
 </body>
 </html>
